# cloak

./: .cloak.yaml  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  architecture.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: index.md
frontend/: jest.setup.js  next.config.js  package-lock.json  package.json
frontend/__tests__/hooks/: useApi.test.tsx
frontend/__tests__/lib/: api.test.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/components/: EntityDetectionPreview.tsx  FileUpload.tsx  Header.tsx  NaturalLanguageInput.tsx  ProcessingStatus.tsx
frontend/src/hooks/: useApi.ts
frontend/src/lib/: api.ts  query-client.ts
frontend/src/types/: api.ts
packaging/homebrew/: cloak.rb
policies/: default.yaml
src/cloak/: __init__.py  cli.py  config.py
src/cloak/detect/: regex_backend.py  spacy_backend.py  spacy_ruler.py  validators.py
src/cloak/engine/: actions.py  pipeline.py  pseudonymizer.py
src/cloak/nl/: groq_parser.py  llm_entity_detector.py  redaction_parser.py  schema.py
src/cloak/reporting/: html.py
src/cloak/tui/: review_app.py
src/cloak/visual/: __init__.py  redactor.py
tests/: test_cli.py  test_llm_entity_detector.py  test_llm_pipeline_integration.py  test_pdf_entity_detection.py  test_pipeline_with_spacy.py  test_redaction_parser.py  test_regex.py  test_regex_validators.py  test_secrets_and_networks.py  test_spacy_backend.py  test_spacy_integration.py  test_spacy_ruler.py  test_visual_redactor.py  test_web_api.py
tests/fixtures/: sample.txt
(+8 files in other folders)
